# nuke-it

./: .env.example  Cargo.toml
assets/: index.html  script.js
docs/: schemas.sql
src/: main.rs  types.rs
src/db/: connect.rs
src/service/: fetch.rs  mod.rs  spin.rs  types.rs
