[package]
name = "nuke-it"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
dotenv = "0.15.0"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.1"
native-tls = "0.2.14"
openssl = "0.10.74"
postgres-openssl = "0.5.2"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
